--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
         "name": "Run Single LoRA Training",
         "type": "python",
         "request": "launch",
-        "program": "${workspaceFolder}/train_single_lora.py",
+        "program": "${workspaceFolder}/train_lora/train_lora_sst2.py",
         "console": "integratedTerminal",
         "justMyCode": false,
         "env": {
