--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,28 +2,101 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug single_sampling",
+      "name": "Debug single_sampling", //下载数据集用
       "type": "python",
       "request": "launch",
       "program": "${workspaceFolder}/data/scripts/single_sampling.py",
       "args": [
         "--config_doc", "data/configs/single_sampling_tasks.yaml",
-        "--task", "xsum", "conll2003",
+        "--task", "agnews", 
+        // "--task", "xsum", "conll2003",
         // "--task", "sst2", "mnli", "qqp", "squad", "xsum", "agnews", "conll2003",
       ],
       "console": "integratedTerminal"
     },
     {
-        "name": "Run Single LoRA Training",
-        "type": "python",
-        "request": "launch",
-        "program": "${workspaceFolder}/train_lora/train_lora_sst2.py",
-        "console": "integratedTerminal",
-        "justMyCode": false,
-        "env": {
-          "TOKENIZERS_PARALLELISM": "false"
-        },
-        "cwd": "${workspaceFolder}"
+      "name": "Train LoRA - SST-2",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_cls.py",
+      "args": ["--config", "configs/single_lora_sst2.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - AGNews",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_cls.py",
+      "args": ["--config", "configs/single_lora_agnews.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - MNLI",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_cls.py",
+      "args": ["--config", "configs/single_lora_mnli.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - QQP",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_cls.py",
+      "args": ["--config", "configs/single_lora_qqp.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - CoNLL03 (NER)",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_conll03.py",
+      "args": ["--config", "configs/single_lora_conll03.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - SQuAD (QA)",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_squad.py",
+      "args": ["--config", "configs/single_lora_squad.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
+    },
+    {
+      "name": "Train LoRA - XSum (Summarization)",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/train_lora/train_lora_xsum.py",
+      "args": ["--config", "configs/single_lora_xsum.yaml"],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "env": {
+        "TOKENIZERS_PARALLELISM": "false"
+      }
     }
   ]
 }
