--- a/configs/single_lora_agnews.yaml
+++ b/configs/single_lora_agnews.yaml
@@ -4,13 +4,13 @@ task_type: classification
 num_labels: 4
 class_names: ['World', 'Sports', 'Business', 'Sci/Tech']
 
-backbone_model: roberta-base
+backbone_model: distilbert-base-uncased
 
 lora:
   r: 8
   alpha: 16
   dropout: 0.1
-  target_modules: ["query", "value"]
+  target_modules: ["q_lin", "v_lin"]
 
 train:
   seed: 42
@@ -30,23 +30,23 @@ early_stopping:
   mode: max           # val_loss是min，val_acc是max, val_f1是max
 
 data:
-  train_file: data/single_lora_data/ag_news_train_07052025_1559.json
-  val_file: data/single_lora_data/ag_news_val_07102025_1642.json
+  train_file: ${DATA_ROOT}/single_lora_data/ag_news_train_07052025_1559.json
+  val_file: ${DATA_ROOT}/single_lora_data/ag_news_val_07102025_1642.json
 
 output:
-  save_dir: /content/drive/MyDrive/DynamoRouterCheckpoints/adapter_agnews
+  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_agnews
   save_best_only: true
   monitor_metric: val_acc  # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: true
-  log_dir: /content/drive/MyDrive/DynamoRouterLogs/adapter_agnews
+  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_agnews
 
 # ========= 调试专用 =========
 # 调试时EPOCH可改为: num_epochs: 1
 # 去COLAB训练时要把 skip_training: false, limit_batches: None 
 debug:
-  # skip_training: true       # 跳过训练主循环，只测试evaluate和保存流程
-  skip_training: false 
   skip_evaluation: false    # 不跳评估，让模型至少走一次评估流程
-  # limit_batches: 2          # 可选：只取前2个batch进行evaluate（None表示不限制）
+  skip_training: false 
   limit_batches: None
+  # skip_training: true       # 本地测试时用：跳过训练主循环，只测试evaluate和保存流程
+  # limit_batches: 2          # 本地测试时用：：只取前2个batch进行evaluate（None表示不限制）
