--- a/configs/single_lora_qqp.yaml
+++ b/configs/single_lora_qqp.yaml
@@ -5,7 +5,7 @@ task_type: classification
 num_labels: 2
 class_names: ['not_duplicate', 'duplicate']
 
-backbone_model: roberta-base
+backbone_model: bert-base-uncased
 
 lora:
   r: 8
@@ -31,23 +31,23 @@ early_stopping:
   mode: max           # val_loss是min，val_acc是max, val_f1是max
 
 data:
-  train_file: data/single_lora_data/glue_qqp_train_07052025_1527.json
-  val_file: data/single_lora_data/glue_qqp_validation_07052025_1527.json
+  train_file: ${DATA_ROOT}/single_lora_data/glue_qqp_train_07052025_1527.json
+  val_file: ${DATA_ROOT}/single_lora_data/glue_qqp_validation_07052025_1527.json
 
 output:
-  save_dir: /content/drive/MyDrive/DynamoRouterCheckpoints/adapter_qqp
+  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_qqp
   save_best_only: true
   monitor_metric: val_acc  # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: true
-  log_dir: /content/drive/MyDrive/DynamoRouterLogs/adapter_qqp
+  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_qqp
 
 # ========= 调试专用 =========
 # 调试时EPOCH可改为: num_epochs: 1
 # 去COLAB训练时要把 skip_training: false, limit_batches: None 
 debug:
-  # skip_training: true       # 跳过训练主循环，只测试evaluate和保存流程
-  skip_training: false 
   skip_evaluation: false    # 不跳评估，让模型至少走一次评估流程
-  # limit_batches: 2          # 可选：只取前2个batch进行evaluate（None表示不限制）
+  skip_training: false 
   limit_batches: None
+  # skip_training: true       # 本地测试时用：跳过训练主循环，只测试evaluate和保存流程
+  # limit_batches: 2          # 本地测试时用：：只取前2个batch进行evaluate（None表示不限制）
