--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,18 @@
       "console": "integratedTerminal"
     },
     {
+      "name": "Debug router_sampling", //下载数据集用
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/data/scripts/get_router_data.py",
+      "args": [
+        "--config_doc", "data/configs/router_sampling.yaml",
+        // "--task", "xsum", "conll2003",
+        "--task", "sst2", "mnli", "qqp", "squad", "xsum", "agnews", "conll2003",
+      ],
+      "console": "integratedTerminal"
+    },
+    {
       "name": "check target models", //检查基座里的Q,V两个模块对应的模块名
       "type": "python",
       "request": "launch",
