--- a/configs/router.yaml
+++ b/configs/router.yaml
@@ -3,6 +3,7 @@ task_type: classification
 num_labels: 7
 task_names: ['sst2', 'mnli', 'qqp', 'squad', 'conll03', 'xsum', 'agnews']
 
+
 # ========= 模型结构 =========
 backbone: roberta-base  # 可选你喜欢的主干，如 roberta-base / distilroberta 等
 
@@ -28,8 +29,8 @@ early_stopping:
   mode: max
 
 data:
-  train_file: ${DATA_ROOT}/router_data/router_train.json
-  val_file: ${DATA_ROOT}/router_data/router_val.json
+  train_file: ${DATA_ROOT}/router_data/router_train.jsonl
+  val_file: ${DATA_ROOT}/router_data/router_val.jsonl
 
 # ========= 输出配置 =========
 output:
