--- a/configs/single_lora_squad.yaml
+++ b/configs/single_lora_squad.yaml
@@ -33,7 +33,7 @@ train:
 early_stopping:
   enabled: true
   patience: 5
-  monitor: val_f1  # best model
+  monitor: val_exact_match  # best model
   mode: max          # val_loss是min，val_acc是max, val_f1是max
 
 data:
@@ -43,7 +43,7 @@ data:
 output:
   save_dir: /${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_squad
   save_best_only: true
-  monitor_metric: val_f1  # 自动对齐 early_stopping
+  monitor_metric: val_exact_match   # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: true
   log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_squad
