--- a/configs/router.yaml
+++ b/configs/router.yaml
@@ -11,11 +11,11 @@ router:
   temperature: 1.0
 
 # ========= 训练参数 =========
-training:
+train:
   seed: 42
   batch_size: 16
   learning_rate: 5e-5
-  epochs: 5
+  num_epochs: 5
   max_seq_length: 128
   optimizer: adamw
   lr_scheduler: linear
