--- a/configs/single_lora_conll03.yaml
+++ b/configs/single_lora_conll03.yaml
@@ -35,12 +35,12 @@ data:
   label2id_file: ${DATA_ROOT}/label2id_for_conll03.json 
 
 output:
-  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_conll03
+  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/
   save_best_only: true
   monitor_metric: val_f1  # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: true
-  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_conll03
+  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/
 
 # ========= 调试专用 =========
 # 调试时EPOCH可改为: num_epochs: 1
