--- a/configs/single_lora_squad.yaml
+++ b/configs/single_lora_squad.yaml
@@ -41,12 +41,12 @@ data:
   val_file: ${DATA_ROOT}/single_lora_data/squad_val_cleaned_file.jsonl
 
 output:
-  save_dir: /${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_squad
+  save_dir: /${DRIVE_ROOT}/DynamoRouterCheckpoints/
   save_best_only: true
   monitor_metric: val_exact_match   # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: true
-  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_squad
+  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/
 
 # ========= 调试专用 =========
 # 调试时EPOCH可改为: num_epochs: 1
