--- a/configs/single_lora_xsum.yaml
+++ b/configs/single_lora_xsum.yaml
@@ -41,12 +41,12 @@ data:
 
 # ========= 输出路径 =========
 output:
-  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/adapter_xsum
+  save_dir: ${DRIVE_ROOT}/DynamoRouterCheckpoints/
   save_best_only: true
   monitor_metric: val_loss  # 自动对齐 early_stopping
   save_lora_adapter: true
   save_task_head: false  # 通常没有分类头
-  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/adapter_xsum
+  log_dir: ${DRIVE_ROOT}/DynamoRouterLogs/
 
 # ========= 调试专用 =========
 # 调试时EPOCH可改为: num_epochs: 1
