--- a/configs/router.yaml
+++ b/configs/router.yaml
@@ -4,17 +4,17 @@ num_labels: 7
 task_name: 'router'
 
 # ========= 模型结构 =========
-backbone: roberta-base  # 可选你喜欢的主干，如 roberta-base / distilroberta 等
+backbone: roberta-large  # 可选你喜欢的主干，如 roberta-base / distilroberta 等
 
 router:
-  temperature: 1.0
+  temperature: 0.5
 
 # ========= 训练参数 =========
 train:
-  seed: 223
+  seed: 21353
   batch_size: 16
   learning_rate: 5e-5
-  num_epochs: 5
+  num_epochs: 8
   max_seq_length: 128
   optimizer: adamw
   lr_scheduler: linear
