--- a/configs/router.yaml
+++ b/configs/router.yaml
@@ -4,7 +4,7 @@ num_labels: 7
 task_name: 'router'
 
 # ========= 模型结构 =========
-backbone: roberta-large  # 可选你喜欢的主干，如 roberta-base / distilroberta 等
+backbone: roberta-base  # 可选你喜欢的主干，如 roberta-base / distilroberta 等
 
 router:
   temperature: 0.5
@@ -12,13 +12,13 @@ router:
 # ========= 训练参数 =========
 train:
   seed: 56121
-  batch_size: 16
-  learning_rate: 5e-5
+  batch_size: 32
+  learning_rate: 3e-5
   num_epochs: 8
   max_seq_length: 128
   optimizer: adamw
   lr_scheduler: linear
-  warmup_ratio: 0.1
+  warmup_ratio: 0.2
 
 # ========= 早停策略 =========
 early_stopping:
