--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "program": "${workspaceFolder}/data/scripts/single_sampling.py",
       "args": [
         "--config_doc", "data/download_configs/single_sampling_tasks.yaml",
-        "--task", "squad", 
+        "--task", "sst2", 
         // "--task", "xsum", "conll2003",
         // "--task", "sst2", "mnli", "qqp", "squad", "xsum", "agnews", "conll2003",
       ],
@@ -38,7 +38,7 @@
       "program": "${workspaceFolder}/inference_cli.py",
       "args": [
         "--config", "configs/dynamo.yaml",
-        "--input_json", "data/end2end_mix/data_inference.jsonl",
+        "--input_json", "data/end2end_mix/data_inference_sst2.jsonl",
         "--output_json", "results/inference_results.jsonl"
       ],
       "console": "integratedTerminal"
